added segment counts

--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -13698,7 +13698,7 @@
 }
 
 @book{1897_adelaaretal2004,
-    author = {Adelaar, Willem F. H. \\\\& Pieter C. Muysken},
+    author = {Adelaar, Willem F. H. \\\\\\\\& Pieter C. Muysken},
     address = {New York},
     bibtexkey = {Adelaaretal2004},
     date-added = {2014-07-09 13:41:25 +0000},
@@ -14822,7 +14822,7 @@
 }
 
 @book{1954_arikapu2010,
-    author = {Arikapú, Mamoa; Nazaré Arikapú; Hein van der Voort \\\\& Ana Carolina Ferreira Alves},
+    author = {Arikapú, Mamoa; Nazaré Arikapú; Hein van der Voort \\\\\\\\& Ana Carolina Ferreira Alves},
     bibtexkey = {Arikapu2010},
     booktitle = {Cadernos de Etnolingü{'i}stica},
     date-added = {2014-07-09 13:41:25 +0000},
@@ -15571,7 +15571,7 @@
 
 @incollection{1994_tellesetal2011,
     author = {Telles, Stella and Wetzels, Leo},
-    editor = {Emilio Bonvini, Joëlle Busuttil \\\\& Alain Peyraube},
+    editor = {Emilio Bonvini, Joëlle Busuttil \\\\\\\\& Alain Peyraube},
     address = {Paris},
     bibtexkey = {Tellesetal2011},
     booktitle = {Dictionnaire des langues},
@@ -15588,7 +15588,7 @@
 
 @incollection{1995_tellesetal2011,
     author = {Telles, Stella and Wetzels, Leo},
-    editor = {Emilio Bonvini, Joëlle Busuttil \\\\& Alain Peyraube},
+    editor = {Emilio Bonvini, Joëlle Busuttil \\\\\\\\& Alain Peyraube},
     address = {Paris},
     bibtexkey = {Tellesetal2011},
     booktitle = {Dictionnaire des langues},
@@ -17254,7 +17254,7 @@
 }
 
 @book{2084_krivosheindecanese2000,
-    author = {Krivoshein de Canese, Natalia, \\\\& Feliciano Acosta Alcaraz},
+    author = {Krivoshein de Canese, Natalia, \\\\\\\\& Feliciano Acosta Alcaraz},
     bibtexkey = {Krivosheindecanese2000},
     date-added = {2014-07-09 13:41:25 +0000},
     date-modified = {2014-07-09 13:41:26 +0000},
@@ -17979,7 +17979,7 @@
 
 @incollection{2127_muysken2000,
     author = {Muysken, Pieter},
-    editor = {van der Voort \\\\& Simon van de Kerke, Hein},
+    editor = {van der Voort \\\\\\\\& Simon van de Kerke, Hein},
     address = {Leiden},
     bibtexkey = {Muysken2000},
     date-added = {2014-07-09 13:41:25 +0000},
