--- a/cldf/sources.bib
+++ b/cldf/sources.bib
@@ -20753,7 +20753,7 @@
 @incollection{1297_abn,
     Author = {Gardner, Ian},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {abn.pdf},
@@ -20768,7 +20768,7 @@
 @incollection{1298_any,
     Author = {Pyne, P. C.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2019-07-29 14:36:50 +0200},
     Filenames = {any_Pyne1972.pdf},
@@ -20783,7 +20783,7 @@
 @incollection{1299_dgh,
     Author = {Frick, Esther, J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {dgh.pdf},
@@ -20798,7 +20798,7 @@
 @incollection{1300_afo,
     Author = {Mackay, V.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {afo.pdf},
@@ -20813,7 +20813,7 @@
 @incollection{1301_fuv,
     Author = {Arnott, D. W.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {fuv.pdf},
@@ -20828,7 +20828,7 @@
 @incollection{1302_acd,
     Author = {Cleal, Alizon M.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {acd.pdf},
@@ -20843,7 +20843,7 @@
 @incollection{1303_ayg,
     Author = {Cleal, Alizon M.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {ayg.pdf},
@@ -20858,7 +20858,7 @@
 @incollection{1304_hbb,
     Author = {Greive, Jerry A.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {hbb.pdf},
@@ -20873,7 +20873,7 @@
 @incollection{1305_kwl,
     Author = {Netting, Robert},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {kwl.pdf},
@@ -20888,7 +20888,7 @@
 @incollection{1306_kye,
     Author = {Cleal, Alizon M.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {kye.pdf},
@@ -20903,7 +20903,7 @@
 @incollection{1307_krm,
     Author = {Pichl, Walter J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {krm.pdf},
@@ -21086,7 +21086,7 @@
 @incollection{1320_akp,
     Author = {Iddah, Robert K.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {akp.pdf},
@@ -21101,7 +21101,7 @@
 @incollection{1321_bun,
     Author = {Pichl, Walter J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {bun.pdf},
@@ -21116,7 +21116,7 @@
 @incollection{1322_buy,
     Author = {Pichl, Walter J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {buy.pdf},
@@ -21131,7 +21131,7 @@
 @incollection{1323_cpn,
     Author = {Painter, Colin},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {cpn.pdf},
@@ -21146,7 +21146,7 @@
 @incollection{1324_fap,
     Author = {Pichl, Walter J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {fap.pdf},
@@ -21161,7 +21161,7 @@
 @incollection{1325_gur,
     Author = {Schaefer, Robert},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {gur.pdf},
@@ -21176,7 +21176,7 @@
 @incollection{1326_lip,
     Author = {Allan, Edward J.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {lip.pdf},
@@ -21191,7 +21191,7 @@
 @incollection{1327_maw,
     Author = {Osbiston, Rachel},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {maw.pdf},
@@ -21220,7 +21220,7 @@
 @incollection{1329_pbp,
     Author = {Ducos, Gisele},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {pbp.pdf},
@@ -21235,7 +21235,7 @@
 @incollection{1330_snw,
     Author = {Allen, Christine},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {snw.pdf},
@@ -21250,7 +21250,7 @@
 @incollection{1331_tiv,
     Author = {Arnott, D. W.},
     Editor = {Kropp-Dakubu, M. E.},
-    Booktitle = {West African Langauge Data Sheets},
+    Booktitle = {West African Language Data Sheets},
     Date-Added = {2014-06-23 21:11:09 +0000},
     Date-Modified = {2014-06-23 21:11:09 +0000},
     Filenames = {tiv.pdf},
@@ -24605,7 +24605,7 @@
     Filenames = {Edelsten_ndj.pdf},
     Inventoryid = {1611},
     Publisher = {Rudiger Koppe},
-    Title = {A grammatical sketch of Chindamba: A Bantu langauge (G52) of Tanzania},
+    Title = {A grammatical sketch of Chindamba: A Bantu language (G52) of Tanzania},
     Year = {2010}
 }
 
